# duckdb-openmetrics

./: .gitignore  Cargo.toml  Makefile  README.md  description.yml  justfile
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs  open_metrics.rs  prometheus.rs  utils.rs
tests/: actuator-prometheus.txt  metrics_test.rs  openmetrics.txt
tests/sql/: openmetrics.test
